changes made to index.html

--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
     </head>
 
     <body>
-        <head>
+        <header>
             <nav>
                 <u1 class="nav-cont">
                     <l1 class="nav-item" id="home">
-                        <a href="#">Home</a>
+                        <a href="index.html">Home</a>
                     </l1>
                     <li class="nav-item">
-                        <a href="#">Coursework</a>
+                        <a href="coursework.html">Coursework</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#">Projects</a>
+                        <a href="projects.html">Projects</a>
                     </l1>
 
                     <li class="nav-item">
-                        <a href="#">Resume</a>
+                        <a href="resume.html">Resume</a>
                     </l1>
 
                     <li class="nav-item">
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </l1>
                 </u1>
             </nav>
-        </head>
+        </header>
 
         <div class="title">
             <h1> Hi, I'm <u class="name"> Henry.</u></h1>
