added title and favicon

--- a/coursework.html
+++ b/coursework.html
@@ -2,10 +2,11 @@
 <hmtl>
     <head>
         <meta charset="utf-8">
-        <title>Home</title>
+        <title>Coursework | Henry Martinez</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/Users/Henry/Downloads/favicon.ico">
         <link rel="stylesheet" href="coursework.css">
     </head>
 
