--- a/coursework.html
+++ b/coursework.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="/icons/favicon.ico">
         <link rel="stylesheet" href="coursework.css">
     </head>
 
@@ -46,32 +46,32 @@
                   <th>Objectives</th>
                 </tr>
                 <tr>
-                  <td>COMP 111A/B</td>
+                  <td><img alt=""class="icons" src="icons/csun.png"/>&nbsp;&nbsp;COMP 111A/B</td>
                   <td>Introduction to Algorithms and Computer Programming</td>
                   <td><strong>A/A</strong></td>
                   <td>Swift, Java, Algorithms, Object-Oriented Programming, Linked-Lists </td>
                 </tr>
                 <tr>
-                  <td>COMP 122</td>
+                  <td><img class="icons" src="icons/csun.png"/>&nbsp;&nbsp;COMP 122</td>
                   <td>Computer Architecture and Assembly Language</td>
                   <td><strong>A</strong></td>
                   <td>Computer Architecture, Assembly Lanuage Programming, Data Representation, MIPS, Number Encoding</td>
                 </tr>
                 <tr>
-                  <td>COMP 182</td>
+                  <td><img class="icons" src="icons/csun.png"/>&nbsp;&nbsp;COMP 182</td>
                   <td>Data Structures & Program Design</td>
                   <td><strong>A</strong></td>
                   <td>Java, Data Structures, Program Design, Composite Data Types, Recursion, Time-Complexity Expressions</td>
                 </tr>
                 <tr>
-                    <td>MATH 150A/B</td>
+                    <td><img class="icons" src="icons/csun.png"/>&nbsp;&nbsp;MATH 150A/B</td>
                     <td>Calculus I & II</td>
                     <td><strong>A/B</strong></td>
                     <td>Limits, Derivatives, Applications of Differentiation, Integrals, Sequences/Series,<br>
                     Power Series, Parametric/Polar Coordinates, Vectors</td>
                   </tr>
                   <tr>
-                    <td>MATH 262</td>
+                    <td><img class="icons" src="icons/csun.png"/>&nbsp;&nbsp;MATH 262</td>
                     <td>Intro to Linear Algebra</td>
                     <td><strong>A</strong></td>
                     <td>Systems of Linear Equations, Matrices, Determinants, Eigenvalues, Vector Spaces/Linear Transformations,<br>
@@ -83,7 +83,7 @@
 
         <footer>
             <div>
-                <a href="https://github.com/hnrymrtnz/hnrymrtnz.github.io"> Made with love by Henry Martinez 🤗</a>
+                <a href="https://github.com/hnrymrtnz/hnrymrtnz.github.io"> Check out my Github to see how I built this website! 🤗</a>
             </div>
         </footer>
     </body>
