--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="icon" href="favicon.ico">
-        <link rel="stylesheet" href="index.css">
+        <link rel="icon" href="/icons/favicon.ico">
+        <link rel="stylesheet" href="/css/index.css">
     </head>
 
     <body>
@@ -38,17 +38,17 @@
 
         <div class="title">
             <h1> Hi, I'm <u class="name"> Henry.</u></h1>
-            <h1 class="subtitle"> Aspiring Full-Stack Developer </h1>
-            <div class="line"></div>
+            <h1 class="subtitle"> Aspiring Software Engineer</h1>
+
+            <div class="butpos">
+                <button onclick=location.href="aboutme.html" class="button" type="button"> About Me </button>
+            </div>
         </div>
     
-        <div class="butpos">
-            <button class="button" type="button"> About Me </button>
-        </div>
 
         <footer>
             <div>
-                <a href="https://github.com/hnrymrtnz/hnrymrtnz.github.io"> Made with love by Henry Martinez 🤗</a>
+                <a href="https://github.com/hnrymrtnz/hnrymrtnz.github.io"> Check out my Github to see how I built this website! 🤗</a>
             </div>
         </footer>
     </body>
