--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,7 @@
                     <strong>Welcome to my website! My name is Henry Martinez and I'm a sophomore majoring in Computer Science at California State University, Northridge. 
                     I've always been passionate about all things computer science and now I'm pursuing it as a career, learning in and out of the classroom. 
                     My main interests are artifical intelligence and software development, but my main goal is to become a software engineer.
-                    I'm currently seeking </strong>
+                    I'm currently seeking an internship in software engineering, but I would gladly want to intern in any other related field. </strong>
                 </p>
                 <p class="titles"> Languages </p>
                 <p class="desc"> 
