--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
         <div class="contact">
             <h1 class="title"> Contact Me </h1>
-            <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+            <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact.php">
             <div class="fcf-form-group">
                 <label for="Name" class="fcf-label"><strong>Name:</strong></label>
                 <div class="fcf-input-group">
