--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
             <p class="titles"> 
                 NASA Great Lunar Expedition for Everyone (GLEE) </p>
             <p class="desc"> 
-                <strong> he Great Lunar Expedition for Everyone (GLEE) is an international student mission to send hundreds of miniature spacecraft called LunaSats to the surface of the Moon to conduct scientific and 
+                <strong> The Great Lunar Expedition for Everyone (GLEE) is an international student mission to send hundreds of miniature spacecraft called LunaSats to the surface of the Moon to conduct scientific and 
                     technological experiments through hands-on participation by students from all across the world, from South Africa to India. 
                     GLEE aims to engage mission contributors, science and engineering mentors and participants, outreach partners, and the public at large.</strong><br>
                 <strong> Link: &nbsp;<a class="links" href="https://www.glee2023.org/">GLEE</a>
