--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,23 @@
 
         <div class="projects">
             <h1 class="title"> Projects </h1>
+            <p class="titles"> 
+                NASA Great Lunar Expedition for Everyone (GLEE) </p>
+            <p class="desc"> 
+                <strong> The Great Lunar Expedition for Everyone (GLEE) is an international student mission to send hundreds of miniature spacecraft called LunaSats to the surface of the Moon to conduct scientific and 
+                    technological experiments through hands-on participation by students from all across the world, from South Africa to India. 
+                    GLEE aims to engage mission contributors, science and engineering mentors and participants, outreach partners, and the public at large.</strong><br>
+                <strong> Link: &nbsp;<a class="links" href="https://www.glee2023.org/">GLEE</a>
+            </p>
+            <p class="titles"> 
+                Integer Conversion Encoding </p>
+            <p class="desc"> 
+                <strong> Under the guidance of Professor Steven Fitzgerald, 
+                    a few students and I are creating an academic tool used to convert and encode integers of various bases 
+                    which will help current and future students understand how conversion and encoding works. The project is 
+                    currently being developed. </strong><br>
+                <strong> Link: &nbsp;<a class="links" href="https://github.com/smf-steve/integers-conversion-encoding">Integer Conversion Encoding</a>
+            </p>
             <p class="titles"> Clasrooms Project </p>
             <p class="desc"> 
                 <strong> The purpose of this project was to gain a deeper understanding of object-oriented programming through user input, using Java.</strong><br>
@@ -49,14 +66,6 @@
                     album for any given birthday input by the user.
                 </strong><br>
                 <strong> Link: &nbsp;<a class="links" href="https://github.com/hnrymrtnz/billboardbirthday">Billboard Birthday</a>
-            </p>
-            <p class="titles"> 
-                NASA Great Lunar Expedition for Everyone (GLEE) </p>
-            <p class="desc"> 
-                <strong> The Great Lunar Expedition for Everyone (GLEE) is an international student mission to send hundreds of miniature spacecraft called LunaSats to the surface of the Moon to conduct scientific and 
-                    technological experiments through hands-on participation by students from all across the world, from South Africa to India. 
-                    GLEE aims to engage mission contributors, science and engineering mentors and participants, outreach partners, and the public at large.</strong><br>
-                <strong> Link: &nbsp;<a class="links" href="https://www.glee2023.org/">GLEE</a>
             </p>
         </div>
 
