spelling error fixed

--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
                     currently being developed. </strong><br>
                 <strong> Link: &nbsp;<a class="links" href="https://github.com/smf-steve/integers-conversion-encoding">Integer Conversion Encoding</a>
             </p>
-            <p class="titles"> Clasrooms Project </p>
+            <p class="titles"> Classrooms Project </p>
             <p class="desc"> 
                 <strong> The purpose of this project was to gain a deeper understanding of object-oriented programming through user input, using Java.</strong><br>
                 <strong> Link: &nbsp;<a class="links" href="https://github.com/hnrymrtnz/classrooms">Classrooms</a>
