--- a/aboutme.html
+++ b/aboutme.html
@@ -43,13 +43,14 @@
                 <p class="desc"> 
                     <strong>Welcome to my website! My name is Henry Martinez and I'm a sophomore majoring in Computer Science at California State University, Northridge. 
                     I've always been passionate about all things computer science and now I'm pursuing it as a career, learning in and out of the classroom. 
-                    My main interests are artifical intelligence and software development, but my main goal is to become a software engineer.
-                    I'm currently seeking an internship in software engineering, but I would gladly want to intern in any other related field. </strong>
+                    My main topics of interest are data science and web development, with a strong inclination to web-scraping, and I hope to pursue these topics
+                    as a career. </strong>
                 </p>
                 <p class="titles"> Languages </p>
                 <p class="desc"> 
                     <strong><img class="icons" src="icons/java.png"/>&nbsp;&nbsp;
-                    Java&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/html-5.png"/>&nbsp;&nbsp;
+                    Java&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/python.png"/>&nbsp;&nbsp;
+                    Python&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/html-5.png"/>&nbsp;&nbsp;
                     HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/css-3.png"/>&nbsp;&nbsp;
                     CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/swift.png"/>&nbsp;&nbsp;
                     Swift&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/js.png"/>&nbsp;&nbsp;
@@ -66,7 +67,7 @@
                 </p>
                 <p class="titles"> Interests </p>
                 <p class="desc"> 
-                    <strong>Front-End Development&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Back-End Development&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Data Science&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Artifical Intelligence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UI Design</strong> 
+                    <strong> Full-stack Web Development&nbsp;&nbsp;&nbsp;&nbsp;Data Science&nbsp;&nbsp;&nbsp;&nbsp;Web Scraping&nbsp;&nbsp;&nbsp;&nbsp;Artificial Intelligence&nbsp;&nbsp;&nbsp;&nbsp;UI Design&nbsp;&nbsp;&nbsp;&nbsp;Mechanical Engineering</strong> 
                 </p>
                 
             </div>
