--- a/projects.html
+++ b/projects.html
@@ -47,25 +47,29 @@
                 <strong> Link: &nbsp;<a class="links" href="https://www.glee2023.org/">GLEE</a>
             </p>
             <p class="titles"> 
-                Integer Conversion Encoding </p>
+                Convert and Encode Integers Web Application </p>
             <p class="desc"> 
-                <strong> Under the guidance of Professor Steven Fitzgerald, 
-                    a few students and I are creating an academic tool used to convert and encode integers of various bases 
-                    which will help current and future students understand how conversion and encoding works. The project is 
-                    currently being developed. </strong><br>
+                <strong> Collaborating with multiple classmates under the guidance of Dr. Steven Fitzgerald, we are creating a web
+                    application for format encodings that will serve as an informative and useful way for students to learn an essential
+                    topic covered in COMP 122 (Computer Architecture and Assembly Language) for future and current classes,
+                    using HTML, CSS, JavaScript, React.js, and Bootstrap. </strong><br>
                 <strong> Link: &nbsp;<a class="links" href="https://github.com/smf-steve/integers-conversion-encoding">Integer Conversion Encoding</a>
+            </p>
+            <p class="titles"> 
+                Web Scraping using Java and Related Libraries
+            </p>
+            <p class="desc"> 
+                <strong> Being interested in the topic of web scraping, I developed a program that will tell the user what the #1 Billboard
+                    200 album was for their given birthday using year, month, and day input. Made with Apache Maven and Jsoup,
+                    the program returns the album name, artist name, and the number of weeks spent at #1, all scraped from
+                    Billboard’s website.
+                </strong><br>
+                <strong> Link: &nbsp;<a class="links" href="https://github.com/hnrymrtnz/billboardbirthday">Billboard Birthday</a>
             </p>
             <p class="titles"> Classrooms Project </p>
             <p class="desc"> 
                 <strong> The purpose of this project was to gain a deeper understanding of object-oriented programming through user input, using Java.</strong><br>
                 <strong> Link: &nbsp;<a class="links" href="https://github.com/hnrymrtnz/classrooms">Classrooms</a>
-            </p>
-            <p class="titles"> Billboard Birthday Project </p>
-            <p class="desc"> 
-                <strong> Being interested in learning about fetching data from HTML websites, I built a Java program using Apache Maven and Jsoup that returns the #1 Billboard 200
-                    album for any given birthday input by the user.
-                </strong><br>
-                <strong> Link: &nbsp;<a class="links" href="https://github.com/hnrymrtnz/billboardbirthday">Billboard Birthday</a>
             </p>
         </div>
 
