--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,9 @@
             <p class="desc"> 
                 <strong> Github: &nbsp;<a class="links" href="https://github.com/hnrymrtnz/">https://www.github.com/hnrymrtnz/</a>
             </p>
+            <p class="desc"> 
+                <strong> Email: &nbsp;<a class="links">henry.martinez.713@my.csun.edu</a>
+            </p>
         </div>
 
         <footer>
