--- a/aboutme.html
+++ b/aboutme.html
@@ -67,7 +67,7 @@
                 </p>
                 <p class="titles"> Interests </p>
                 <p class="desc"> 
-                    <strong> Full-stack Web Development&nbsp;&nbsp;&nbsp;&nbsp;Data Science&nbsp;&nbsp;&nbsp;&nbsp;Web Scraping&nbsp;&nbsp;&nbsp;&nbsp;Artificial Intelligence&nbsp;&nbsp;&nbsp;&nbsp;UI Design&nbsp;&nbsp;&nbsp;&nbsp;Mechanical Engineering</strong> 
+                    <strong> Full-stack Web Development&nbsp;&nbsp;&nbsp;&nbsp;Data Science&nbsp;&nbsp;&nbsp;&nbsp;Web Scraping&nbsp;&nbsp;&nbsp;&nbsp;Artificial Intelligence&nbsp;&nbsp;&nbsp;&nbsp;UI Design</strong> 
                 </p>
                 
             </div>
