--- a/aboutme.html
+++ b/aboutme.html
@@ -54,7 +54,8 @@
                     HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/css-3.png"/>&nbsp;&nbsp;
                     CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/swift.png"/>&nbsp;&nbsp;
                     Swift&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/js.png"/>&nbsp;&nbsp;
-                    JavaScript&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/mars.png"/>&nbsp;&nbsp;
+                    JavaScript&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/reactJS.png"/>&nbsp;&nbsp;
+                    React.js&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/mars.png"/>&nbsp;&nbsp;
                     MARS MIPS</strong> 
                 </p>
                 <p class="titles"> Software </p>
@@ -63,7 +64,9 @@
                     Git&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/github.png"/>&nbsp;&nbsp;
                     Github&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/office.png"/>&nbsp;&nbsp;
                     Microsoft Office&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/vscode.png"/>&nbsp;&nbsp;
-                    Visual Studio</strong>
+                    Visual Studio&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/docker.png"/>&nbsp;&nbsp;
+                    Docker&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img class="icons" src="icons/bootstrap.png"/>&nbsp;&nbsp;
+                    Bootstrap</strong>
                 </p>
                 <p class="titles"> Interests </p>
                 <p class="desc"> 
