--- a/projects.html
+++ b/projects.html
@@ -66,10 +66,12 @@
                 </strong><br>
                 <strong> Link: &nbsp;<a class="links" href="https://github.com/hnrymrtnz/billboardbirthday">Billboard Birthday</a>
             </p>
-            <p class="titles"> Classrooms Project </p>
+            <p class="titles"> Object-Oriented Programming and Data Structure Projects </p>
             <p class="desc"> 
-                <strong> The purpose of this project was to gain a deeper understanding of object-oriented programming through user input, using Java.</strong><br>
-                <strong> Link: &nbsp;<a class="links" href="https://github.com/hnrymrtnz/classrooms">Classrooms</a>
+                <strong> A compilation of the projects I have worked on for in-school assignments that have taught me how to 
+                    utilize object-oriented programming and how data structres function. Compliation work in progress on GitHub.
+                </strong><br>
+                <strong> Link: &nbsp;<a class="links" href="https://github.com/hnrymrtnz/classrooms">Projects</a>
             </p>
         </div>
 
