--- a/index.html
+++ b/index.html
@@ -1,55 +1,18 @@
 <!DOCTYPE html>
-<hmtl>
-    <head>
-        <meta charset="utf-8">
-        <title>Home | Henry Martinez</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="icon" href="/icons/favicon.ico">
-        <link rel="stylesheet" href="index.css">
-    </head>
-
-    <body>
-        <header>
-            <nav>
-                <u1 class="nav-cont">
-                    <l1 class="nav-item" id="home">
-                        <a href="index.html">Home</a>
-                    </l1>
-                    <li class="nav-item">
-                        <a href="coursework.html">Coursework</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="projects.html">Projects</a>
-                    </l1>
-
-                    <li class="nav-item">
-                        <a href="resume.html">Resume</a>
-                    </l1>
-
-                    <li class="nav-item">
-                        <a href="contact.html">Contact</a>
-                    </l1>
-                </u1>
-            </nav>
-        </header>
-
-        <div class="title">
-            <h1> Hi, I'm <u class="name"> Henry.</u></h1>
-            <h1 class="subtitle"> Aspiring Software Engineer</h1>
-
-            <div class="butpos">
-                <button onclick=location.href="aboutme.html" class="button" type="button"> About Me </button>
-            </div>
-        </div>
-    
-
-        <footer>
-            <div>
-                <a href="https://github.com/hnrymrtnz/hnrymrtnz.github.io"> Check out my Github to see how I built this website! 🤗</a>
-            </div>
-        </footer>
-    </body>
-</hmtl>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
+      <link rel = "stylesheet" type = "text/css" href = "style.css">
+      <title>Henry Martinez</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
