--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     Dean's List: Fall 2021, Spring 2021
                 </p>
                 <p class="head">
-                    Organizations
+                    Organizations and Activities 
                 </p>
                 <p>
                     IEEE-HKN Lambda Beta Honor Society (Member)
@@ -67,6 +67,24 @@
                 </p>
                 <p>
                     STEM Advantage Scholar Program (Scholar)
+                </p>
+                <p>
+                    NASA L'SPACE Academy
+                </p>
+                <p>
+                    CSUN ASME
+                </p>
+                <p>
+                    CSUN Archery Club
+                </p>
+                <p>
+                    CSUN Badminton Club
+                </p>
+                <p>
+                    CSUN Vex Robotics
+                </p>
+                <p>
+                    CSUN Esports Club
                 </p>
             </div>
         </section>
@@ -104,10 +122,19 @@
 
         <section class="projects">
             <div class="content-wrap">
-                <h2> Projects </h2>
+                <h2> Projects and Experience</h2>
                 <p>
-                    Here are a few of my projects I have or am currently working on:
+                    Here are a few of my projects and experience I have or am currently working on:
                 </p>
+                <p class="head"> 
+                    NASA L'SPACE Proposal Writing and Evaluation Experience (NPWEE)
+                </p>
+                <ul>
+                    <li>Working on a 10-week program in a multi-disciplinary team to develop proposals for new technologies and concepts that enable NASA objectives and enhance mission capabilities.
+                    </li>
+                    <li>Gaining experience in the process of writing, reviewing, and scoring proposals through the lens of a NASA reviewer.
+                    </li> 
+                </ul>
                 <p class="head"> 
                     NASA Great Lunar Expedition for Everyone (GLEE) 
                 </p>
@@ -145,7 +172,7 @@
                 <h2> Resume </h2>
                 <p> Here is my most recently updated resume, but I'm constantly adding things so it's subject to change!: </p>
                 <div>
-                    <iframe type="pdf" src="HENRY_MARTINEZ_RESUME.pdf"></iframe>
+                    <iframe type="pdf" src="HENRYMARTINEZ_RESUME.pdf"></iframe>
                 </div>
             </div>
         </section>
