--- a/index.html
+++ b/index.html
@@ -142,18 +142,20 @@
                     <li>Researched with a team of 6 students from 3 universities on a NASA-funded lunar project, with the goal of establishing a lunar mission for our Lunasat, a tiny programmable spacecraft.</li>
                     <li>Programmed the Lunasat using C++ and the Arduino IDE, collecting temperature, magnetic field, and inertial measurements from the spacecraft’s environment that will aid in conducting our lunar mission.</li> 
                 </ul>
-                <p class="head"> 
-                    Convert and Encode Integers Web Application 
+                <p class="head">
+                    Personal Website / Portfolio
                 </p>
                 <ul>
                     <li>Created a website from scratch using HTML and CSS, hosted by Github Pages and Jekyll, that showcases my skills, projects, coursework, resume, and contact resources.</li>
                 </ul>
                 <p class="head"> 
-                    Web Scraping using Java and Related Libraries
+                    Convert and Encode Integers Web Application 
                 </p>
                 <ul>
-                    <li>Designed and developed a web application in an Agile environment with a group of 5 students using HTML, CSS, and JavaScript, to aid future students in understanding material for computer architecture classes, specifically format encodings and integer conversions.</li>
-                </ul>
+                    <li>Designed and developed a web application in an Agile environment with a group of 5 students using HTML, CSS, and JavaScript, to aid future students in understanding material for computer architecture classes, specifically format encodings and integer conversions.</li>                </ul>
+                <p class="head"> 
+                    Web Scraping using Java and Related Libraries
+                </p>
                 <ul>
                     <li>Developed a web-scraping program using Java and Java libraries (Apache Maven and Jsoup) which tells the user which album and artist were at the top of the Billboard 200 chart for any given date and for how many weeks, using data from Billboard’s website HTML.</li>
                 </ul>
