added project implementation

--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
                 <ul>
                     <li>Created a website from scratch using HTML and CSS, hosted by Github Pages and Jekyll, that showcases my skills, projects, coursework, resume, and contact resources.</li>
                 </ul>
+                <p class="head">
+                    VEEP Quote Generator
+                </p>
+                <ul>
+                    <li> Implemented a quote generator using quotes from the show "VEEP" into my website using HTML, CSS, and JavaScript. </li>
+                    <li> <a href="quote generator bot/index.html">Quote Generator</a></li>
+                </ul>
                 <p class="head"> 
                     Convert and Encode Integers Web Application 
                 </p>
