--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     VEEP Quote Generator
                 </p>
                 <ul>
-                    <li> Implemented a quote generator using quotes from the show "VEEP" into my website using HTML, CSS, and JavaScript. </li>
+                    <li> Implemented a quote generator web application using quotes from the show "VEEP" into my website through HTML, CSS, and JavaScript. </li>
                     <li> <a href="quote generator bot/index.html">Quote Generator</a></li>
                 </ul>
                 <p class="head"> 
