changed color scheme

--- a/quote generator bot/index.html
+++ b/quote generator bot/index.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <img src="selina-meyer.png" alt="selina-veep">
                 <div class="block">
-                    <h1> Random VEEP Quote Generator </h1>
+                    <h1> VEEP Quote Generator </h1>
                     <p> Hit "Generate" and see a random quote from  the hit HBO T.V. show, VEEP! </p>
                     <p> *Most of these quotes are vulgar and dark-humored, beware!* </p>
                     <a href="../index.html"> <p>Miss my website? Click here to go back! </p></a>
