--- a/index.html
+++ b/index.html
@@ -9,18 +9,30 @@
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
         <link rel = "stylesheet" type = "text/css" href = "style.css">
-        <title>Website</title>
+        <title>Henry's Website</title>
     </head>
 
     <body>
-        <section class="hero">
+        <nav>
+            <div class="navbar">
+                <ul class="elements">
+                    <li class="float"> <a href=#abt> About Me </a></li>
+                    <li class="float"> <a href=#coursework> Coursework </a></li>
+                    <li class="float"> <a href=#projects> Projects </a></li>
+                    <li class="float"> <a href=#resume> Resume </a></li>
+                    <li class="float"> <a href=#contact> Contact </a></li>
+                </ul>
+            </div>   
+        </nav>
+
+        <section class="hero" id="hero">
             <div class="content-wrap">
                 <h1> Henry Martinez </h1>
                 <h3> Software Engineer / Web Developer </h3>
             </div>
         </section>
 
-        <section class="about-me">
+        <section class="about-me" id="abt">
             <div class="content-wrap">
                 <h2> About Me </h2>
                 <div class="abme">
@@ -89,7 +101,7 @@
             </div>
         </section>
 
-        <section class="coursework">
+        <section class="coursework" id="coursework">
             <div class="content-wrap">
                 <h2> Coursework </h2>
                 <p>
@@ -120,7 +132,7 @@
             </div>
         </section>
 
-        <section class="projects">
+        <section class="projects" id="projects">
             <div class="content-wrap">
                 <h2> Projects and Experience</h2>
                 <p>
@@ -176,7 +188,7 @@
             </div>
         </section>
 
-        <section class="resume">
+        <section class="resume" id="resume">
             <div class="content-wrap">
                 <h2> Resume </h2>
                 <p> Here is my most recently updated resume, but I'm constantly adding things so it's subject to change!: </p>
@@ -186,7 +198,7 @@
             </div>
         </section>
 
-        <section class="contact">
+        <section class="contact" id="contact">
             <div class="content-wrap">
                 <h2> Contact </h2>
 
