--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
                 <h2> About Me </h2>
                 <div class="abme">
                     <p> 
-                        Welcome to my website! My name is Henry Martinez
-                        and I am a computer science major/data science minor
-                        studying at California State University, Northridge
-                        with a special interest in software engineering,
-                        web development, and data science.
-                        Take a look around, see what I've
-                        been up to, and learn more about me!
+                        Welcome to my website! My name is Henry Martinez and I am currently
+                        a student at California State University, Northridge, studying Computer Science.
+                        I am passionate about all things cybersecurity, and wish to pursue a career in
+                        developing equalized security measures for low-resource communities.
                     </p>
                     <img src="IMG_0945.jpg" alt="face">
                 </div>
@@ -51,52 +48,40 @@
                     Skills
                 </p>
                 <p>
-                    Languages: Java | Python | HTML | CSS | JavaScript | MIPS Architecture
+                    Languages: Python, Java, JavaScript, C++, SQL, Bash
                 </p>
                 <p>
-                    Software: Github | Git | Microsoft Office (Word, Excel, Powerpoint) | VSCode
+                    Tools: Docker, GitHub, Jira, Nginx, LDAP, Postman, VSCode
                 </p>
                 <p>
-                    Interests: Full-stack Web Development | Software Engineering | Data Science | Web Scraping | A.I. | UI Design
+                    Security Software: ADFS, Amazon Cognito, CyberArk, MS Entra ID, Oracle Access Manager, RH IDM, SailPoint IdentityIQ
+                </p>
+                <p>
+                    Interests: Cybersecurity, Identity & Access Management, Authorization, Single Sign-on, Resource Utilization, Security Legislation, Policy-making
                 </p>
                 <p class="head">
-                    Honors
+                    Certifications
                 </p>
                 <p>
-                    GE Honors Program
+                    CompTIA Security+
                 </p>
                 <p>
-                    Dean's List: Fall 2021, Spring 2021
+                    Google Cybersecurity Certificate
+                </p>
+                <p>
+                    ISC2 Certified in Cybersecurity (CC)
                 </p>
                 <p class="head">
                     Organizations and Activities 
                 </p>
                 <p>
-                    IEEE-HKN Lambda Beta Honor Society (Member)
-                </p>
-                <p>
-                    Tau Beta Pi Honor Society (Member)
+                    ISC2 (Member)
                 </p>
                 <p>
                     STEM Advantage Scholar Program (Scholar)
                 </p>
                 <p>
-                    NASA L'SPACE Academy
-                </p>
-                <p>
-                    CSUN ASME
-                </p>
-                <p>
-                    CSUN Archery Club
-                </p>
-                <p>
-                    CSUN Badminton Club
-                </p>
-                <p>
-                    CSUN Vex Robotics
-                </p>
-                <p>
-                    CSUN Esports Club
+                    CSUN Layer8 Club (Member)
                 </p>
             </div>
         </section>
@@ -108,25 +93,34 @@
                     Here is a list of all of the relevant coursework I have taken/am taking:
                 </p>
                 <div class="courses">
-                    <p class="head"> Computer Courses </p>
+                    <p class="head"> Computer Science Courses </p>
                     <ul>
-                        <li> COMP 111A/B: Introduction to Algorithms & Computer Programming (Completed)</li>
-                        <li> COMP 122: Computer Architecture & Assembly Language (Completed)</li>
-                        <li> COMP 182: Data Structres & Program Design (Completed)</li>
-                        <li> COMP 222: Computer Organization (In-progress)</li>
-                        <li> COMP 256: Discrete Structures for Computer Science (In-progress)</li>
-                        <li> COMP 282: Advanded Data Structures (In-progress)</li>
+                        <li> COMP 111A/B: Introduction to Algorithms & Computer Programming </li>
+                        <li> COMP 122: Computer Architecture & Assembly Language</li>
+                        <li> COMP 182: Data Structres & Program Design</li>
+                        <li> COMP 222: Computer Organization (Completed)</li>
+                        <li> COMP 256: Discrete Structures for Computer Science</li>
+                        <li> COMP 282: Advanded Data Structures</li>
+                        <li> COMP 310: Automata Language and Computation </li>
+                        <li> COMP 322: Intro to Operating Systems </li>
+                        <li> COMP 333: Concepts in Programming Languages </li>
+                        <li> COMP 380: Intro to Software Engineering </li>
+                        <li> COMP 440: Database Design </li>
+                        <li> COMP 482: Algorithm Design </li>
+                        <li> COMP 490: Senior Project I </li>
+                        <li> COMP 541: Data Mining </li>
                     </ul>
                     <p class="head"> Math Courses </p>
                     <ul>
-                        <li> MATH 150A: Calculus I (Completed)</li>
-                        <li> MATH 150B: Calculus II (Completed)</li>
-                        <li> MATH 262: Intro to Linear Algebra (Completed)</li>
-                        <li> MATH 340: Introductory Probability (In-progress)</li>
+                        <li> MATH 150A: Calculus I</li>
+                        <li> MATH 150B: Calculus II</li>
+                        <li> MATH 262: Intro to Linear Algebra</li>
+                        <li> MATH 340: Introductory Probability</li>
                     </ul>
                     <p class="head"> Physics Courses </p>
                     <ul>
-                        <li> PHYS 220A: Mechanical Physics (Completed) </li>
+                        <li> PHYS 220A: Mechanical Physics</li>
+                        <li> PHYS 220B: Electrical + Magnetism Physics</li>
                     </ul>
                 </div>
             </div>
@@ -138,6 +132,13 @@
                 <p>
                     Here are a few of my projects and experience I have or am currently working on:
                 </p>
+                <p class="head"> 
+                    NASA Jet Propulsion Laboratory
+                </p>
+                <ul>
+                    <li>Working with the Identity, Credential, and Access Management (ICAM) team to provide solutions for topics in access management, particularly single sign-on
+                    </li>
+                </ul>
                 <p class="head"> 
                     NASA L'SPACE Proposal Writing and Evaluation Experience (NPWEE)
                 </p>
@@ -151,8 +152,7 @@
                     NASA Great Lunar Expedition for Everyone (GLEE) 
                 </p>
                 <ul>
-                    <li>Researched with a team of 6 students from 3 universities on a NASA-funded lunar project, with the goal of establishing a lunar mission for our Lunasat, a tiny programmable spacecraft.</li>
-                    <li>Programmed the Lunasat using C++ and the Arduino IDE, collecting temperature, magnetic field, and inertial measurements from the spacecraft’s environment that will aid in conducting our lunar mission.</li> 
+                    <li>Collaborated with a team of six students from three state-wide universities on a NASA-funded project to program a miniature spacecraft using C++ and Arduino IDE, collecting local surface data for future lunar mission application and implementation. </li> 
                 </ul>
                 <p class="head">
                     Personal Website / Portfolio
@@ -171,7 +171,8 @@
                     Convert and Encode Integers Web Application 
                 </p>
                 <ul>
-                    <li>Designed and developed a web application in an Agile environment with a group of 5 students using HTML, CSS, and JavaScript, to aid future students in understanding material for computer architecture classes, specifically format encodings and integer conversions.</li>                </ul>
+                    <li>Designed and developed a web application with several classmates for CSUN's computer science department, aimed at teaching and aiding future students in topics relating to computer architecture.</li>
+                </ul>
                 <p class="head"> 
                     Web Scraping using Java and Related Libraries
                 </p>
@@ -193,7 +194,7 @@
                 <h2> Resume </h2>
                 <p> Here is my most recently updated resume, but I'm constantly adding things so it's subject to change!: </p>
                 <div>
-                    <iframe type="pdf" src="HENRYMARTINEZ_RESUME.pdf"></iframe>
+                    <iframe type="pdf" src="HENRY_MARTINEZ_RESUME.pdf"></iframe>
                 </div>
             </div>
         </section>
@@ -213,10 +214,6 @@
                 </p>
                 <p> 
                     Email: &nbsp;<a class="links">henry.martinez.713@my.csun.edu</a>
-                </p>
-
-                <p class="head">
-                    Contact Form
                 </p>
             </div>
         </section>
