--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="hero" id="hero">
             <div class="content-wrap">
                 <h1> Henry Martinez </h1>
-                <h3> Software Engineer / Web Developer </h3>
+                <h3> Cybersecurity Engineer </h3>
             </div>
         </section>
 
@@ -98,7 +98,7 @@
                         <li> COMP 111A/B: Introduction to Algorithms & Computer Programming </li>
                         <li> COMP 122: Computer Architecture & Assembly Language</li>
                         <li> COMP 182: Data Structres & Program Design</li>
-                        <li> COMP 222: Computer Organization (Completed)</li>
+                        <li> COMP 222: Computer Organization</li>
                         <li> COMP 256: Discrete Structures for Computer Science</li>
                         <li> COMP 282: Advanded Data Structures</li>
                         <li> COMP 310: Automata Language and Computation </li>
@@ -136,7 +136,7 @@
                     NASA Jet Propulsion Laboratory
                 </p>
                 <ul>
-                    <li>Working with the Identity, Credential, and Access Management (ICAM) team to provide solutions for topics in access management, particularly single sign-on
+                    <li>Working with the Identity, Credential, and Access Management (ICAM) team to provide solutions for topics in access management, particularly single sign-on.
                     </li>
                 </ul>
                 <p class="head"> 
