Added music section

--- a/index.html
+++ b/index.html
@@ -192,6 +192,15 @@
             </div>
         </section>
 
+        <section class="music" id="music">
+            <div class="content-wrap">
+                <h2> Music </h2>
+                <p> What I'm currently listening to! </p>
+                <div id="tracks-container"></div>
+                <script src="js/lastfm.js"></script>
+            </div>
+        </section>
+
         <section class="contact" id="contact">
             <div class="content-wrap">
                 <h2> Contact </h2>
